Bug 280806 - Graticule layer not visible after chaning visibility of atmosphere layer
Summary: Graticule layer not visible after chaning visibility of atmosphere layer
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-26 00:02 UTC by Bernhard Beschow
Modified: 2011-08-26 19:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-08-26 00:02:34 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Konrad Enzensberger has posted the following problem to marble-devel:

updating and compling current marblewidget code i faced curious behavior drawnig layers.

mystic:
this only happens when using the OSM map, with atlas map, behaviour is like before update.


Reproducible: Always

Steps to Reproduce:
- starting marble with settings for Atmosphere enabled, Graticule is drawn on top of map
- switch Amosphere off, Graticule is not visible anymore.
- switch Amosphere on, Graticule stays not visible 


Actual Results:  
Graticule is only visible if starting marble with settings for Atmosphere enabled. If i change Garticule render position to HOVERS_ABOVE_SURFACE, Graticule is always visible, regardless if Atmospherer is on/off.

Expected Results:  
Graticule is always visible when enabled.
Comment 1 Bernhard Beschow 2011-08-26 19:07:49 UTC
Git commit 009a626af88542e9c4d515c47769b0d2f24d734a by Bernhard Beschow.
Committed on 26/08/2011 at 21:00.
Pushed by beschow into branch 'master'.

move graticule plugin to a zValue() of +1.0

Due to undefined behavior when two plugins want to render at the same renderPosition() with same zValue(), the graticule plugin was overpainted by the texture layer, wich has a zValue() of 0.0.

BUG: 280806
CCMAIL: e.konrad@mpegcode.com

M  +5    -0    src/plugins/render/graticule/GraticulePlugin.cpp
M  +3    -1    src/plugins/render/graticule/GraticulePlugin.h

http://commits.kde.org/marble/009a626af88542e9c4d515c47769b0d2f24d734a