move graticule plugin to a zValue() of +1.0

Due to undefined behavior when two plugins want to render at the same renderPosition() with same zValue(), the graticule plugin was overpainted by the texture layer, wich has a zValue() of 0.0.

BUG: 280806
CCMAIL: e.konrad@mpegcode.com